fix: add new sideabr entry for research group admin view, make text overflow instead of ...

--- a/src/main/webapp/app/shared/components/atoms/sidebar-button/sidebar-button.component.scss
+++ b/src/main/webapp/app/shared/components/atoms/sidebar-button/sidebar-button.component.scss
@@ -31,8 +31,8 @@
   }
 
   .text {
-    overflow: hidden;
+    overflow-wrap: break-word;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
   }
 }
